# api

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  cog.toml  justfile  todo.md
.github/workflows/: build.yml  bump.yml  checks.yml  deploy.yml  release.yml  update-api-contracts.yml
migrations/: 20260420050212_create_initial_tables.down.sql  20260420050212_create_initial_tables.up.sql  20260420071115_create_push_subscriptions.up.sql  20260428021045_create_twitch_tokens.down.sql  20260428021045_create_twitch_tokens.up.sql  20260504012517_create_admin_tables.down.sql  20260504012517_create_admin_tables.up.sql  20260504073124_create_provider_tokens.down.sql  20260504073124_create_provider_tokens.up.sql
plans/: admin-session-auth.md  screaming-arch-fixes.md  screaming-arch-refactoring.md
src/: api.rs  app_services.rs  app_state.rs  auth_service.rs  db.rs  error.rs  infrastructure.rs  main.rs  providers.rs  push.rs  router.rs  router_v2.rs  supporters.rs  token_manager.rs  twitch.rs
src/admin/: mod.rs  repositories.rs  sqlite_repository.rs
src/api/: auth.rs  health.rs  push_subscriptions.rs  supporters.rs
src/app/: app.rs  mod.rs  ports.rs  service_adapters.rs
src/app_v2/: app.rs  mod.rs  ports.rs  service_adapters.rs
src/auth/: domain.rs  infra.rs  mod.rs
src/auth_service/: admin_session_repository.rs  admin_whitelist_repository.rs
src/auth_v2/: domain.rs  infra.rs
src/database/: mod.rs  sqlite_pool.rs
src/event_bus/: bus.rs  events.rs  mod.rs
src/eventsub/: application.rs  domain.rs
src/eventsub/infra/: client.rs  listener.rs
src/eventsub_v2/: application.rs  mod.rs
src/eventsub_v2/infra/: client.rs  listener.rs
src/health/: api_handlers.rs  mod.rs
src/infrastructure/: db.rs  db_sqlite.rs
src/infrastructure/db_sqlite/: admin_session.rs  admin_whitelist.rs  models.rs  push_subscriptions.rs  supporters.rs  tokens.rs
src/oauth/: api.rs  api_handlers.rs  domain.rs  infra.rs  mod.rs  service.rs
src/oauth_v2/: api.rs  domain.rs  mod.rs
src/provider/twitch/: api.rs  token_provider.rs
src/provider/twitch/eventsub/: listener.rs  manager.rs  mod.rs
src/providers/: token_repository.rs  twitch.rs
src/providers/twitch/: api.rs  auth.rs  client.rs  eventsub.rs  lifecycle.rs  mod.rs  token_provider.rs
src/providers/twitch/eventsub/: listener.rs  mod.rs
src/push/: api.rs  api_handlers.rs  client.rs  infra.rs  mod.rs  repository.rs  sqlite_repository.rs  subscription.rs  web_push_client.rs
src/push_v2/: api.rs  domain.rs  infra.rs  mod.rs
src/reactors/: chat.rs  mod.rs  stream.rs
src/router/: health.rs
src/router_v2/: health.rs
src/shared_infra_v2/: sqlite_db.rs
src/state/: application.rs  cache.rs  in_memory_repository.rs  mod.rs
src/state/infra/: in_memory.rs
src/state_v2/: application.rs  domain.rs
src/state_v2/infra/: in_memory.rs
src/supporters/: api_handlers.rs  domain.rs  infra.rs  mod.rs  repository.rs  sqlite_repository.rs
src/supporters_v2/: api.rs  infra.rs
src/token/: manager.rs  mod.rs  provider.rs  repository.rs  sqlite_repository.rs  types.rs
src/token_manager/: application.rs  token_provider.rs
src/token_manager/domain/: enums.rs  mod.rs  provider.rs  repository.rs  types.rs
src/token_manager/infra/: mod.rs  sqlite.rs  twitch_provider.rs
src/token_manager_v2/: application.rs
src/token_manager_v2/domain/: enums.rs  mod.rs  provider.rs  repository.rs  types.rs
src/token_manager_v2/infra/: sqlite.rs
src/twitch/: auth.rs  client.rs  eventsub.rs
