[package]
name = "api"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "sqlite"] }
async-trait = "0.1.89"
dotenvy = "0.15.7"
web-push-native = "0.4.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64ct = "1.8.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
twitch_api = { version = "0.7.2", features = ["eventsub", "helix", "client", "reqwest", "twitch_oauth2"] }
futures-util = "0.3.32"
tokio-tungstenite = { version = "0.29.0", features = [
    "tokio-rustls",
    "rustls-pki-types",
    "rustls-native-certs",
    "rustls",
    "rustls-tls-native-roots",
] }
urlencoding = "2.1.3"
url = "2.5.8"
rustls-native-certs = "0.8.3"
rustls = { version = "0.23.40", features = [
    "ring",
    "std",
    "tls12",
], default-features = false }
chrono = { version = "0.4.44", features = ["clock", "serde"] }
async-openai = { version = "0.36.1", features = ["_api", "chat-completion", "chatkit"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
time = "0.3.47"
strum = { version = "0.28.0", features = ["derive"] }
